--- a/app/src/main/res/layout/activity_email_pass_reg.xml
+++ b/app/src/main/res/layout/activity_email_pass_reg.xml
@@ -49,6 +49,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_perm_identity_black_36dp"
                     android:ems="10"
@@ -61,6 +63,8 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_mail_black_24dp"
                     android:ems="10"
@@ -73,6 +77,8 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                     android:ems="10"
@@ -86,6 +92,8 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                     android:ems="10"
