--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -18,7 +18,8 @@
             android:layout_height="228dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:paddingHorizontal="30dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
             android:src="@drawable/city_zaglushka_big" />
 
         <TextView
@@ -59,7 +60,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:background="@color/white"
             android:layout_marginTop="15dp">
 
@@ -79,7 +81,8 @@
                     android:id="@+id/view_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
                     android:text="Here goes the description of our excursion. Maybe even the long one."/>
                 
                 <TextView
@@ -93,7 +96,8 @@
                     android:id="@+id/view_date_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
                     android:text="11.11.11 12:00"/>
                 
                 <TextView
@@ -107,7 +111,8 @@
                     android:id="@+id/view_adress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
                     android:text="We meet there"/>
 
                 <TextView
@@ -121,7 +126,8 @@
                     android:id="@+id/view_language"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
                     android:layout_marginBottom="15dp"
                     android:text="Ukrainian"/>
 
