--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_perm_identity_black_36dp"
                     android:ems="10"
@@ -62,6 +64,8 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                     android:ems="10"
