--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -83,7 +83,8 @@
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@android:color/darker_gray"
-                    android:layout_marginVertical="15dp"/>
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -113,7 +114,8 @@
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@android:color/darker_gray"
-                    android:layout_marginVertical="15dp"/>
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
