--- a/app/src/main/res/menu/activity_menu_main_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_main_drawer.xml
@@ -30,6 +30,10 @@
                 android:icon="@drawable/ic_info_black_24dp"
                 android:title="@string/drawer_info" />
             <item
+                android:id="@+id/nav_how_to"
+                android:icon="@drawable/ic_info_black_24dp"
+                android:title="How To" />
+            <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_exit_to_app_black_48dp"
                 android:title="@string/drawer_log_out" />
