--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -15,6 +15,8 @@
         android:layout_height="match_parent"
         android:layout_margin="15dp"
         android:background="@color/white"
-        android:padding="5dp" ></android.support.v7.widget.RecyclerView>
+        android:padding="5dp" >
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
