--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,28 +102,11 @@
                     android:paddingBottom="20dp"
                     android:paddingTop="10dp">
 
-                    <Button
-                        android:id="@+id/buttonGoogle"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/google_login_logo" />
-
-                    <Button
-                        android:id="@+id/buttonFacebook"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/facebook_login_logo" />
-
-                    <Button
-                        android:id="@+id/buttonTwitter"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/twitter_login_logo" />
-
+                    <com.google.android.gms.common.SignInButton
+                        android:id="@+id/sign_in_button"
+                        android:layout_width="269dp"
+                        android:layout_height="match_parent" />
                 </LinearLayout>
-
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
