--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -149,11 +149,12 @@
             />
 
         <Button
+            android:id="@+id/im_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:text="I'm in"/>
+            android:text="I'm in" />
         
     </LinearLayout>
 
