--- a/app/src/main/res/layout/activity_edit_profile_actiity.xml
+++ b/app/src/main/res/layout/activity_edit_profile_actiity.xml
@@ -41,7 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Edit avatar"/>
+                android:onClick="setAvatar"
+                android:text="Edit avatar" />
 
         </LinearLayout>
 
@@ -109,10 +110,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:padding="20dp"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
-        android:text="Confirm"/>
+        android:layout_marginTop="5dp"
+        android:onClick="onConfrim"
+        android:padding="20dp"
+        android:text="Confirm"
+        tools:onClick="onConfrim" />
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
